      be triggered respectively
    - added new LSCP command "SET STREAMS" to globally alter the maximum
      amount of disk streams, added new LSCP event "GLOBAL_INFO:STREAMS"
      which will be triggered respectively
    - bugfix: retry if "select" returns EINTR (this fixes a crash when
      a gigedit file dialog is opened)

  * Bug fixes:
    - fixed a crash which occurs when removing a sampler channel waiting
      to start instrument loading after another channel
    - fixed a crash which occurs when removing a sampler channel with
      instrument loading in progress (bug #113)
    - fixed termination caused by uncaught exception when adding MIDI
      instrument with PERSISTENT load mode
    - fixed possible iterator invalidations when resetting the sampler
    - fixed memory leaks when issuing the following LSCP commands:
      GET AUDIO_OUTPUT_DRIVER INFO
      GET AUDIO_OUTPUT_DRIVER_PARAMETER INFO
      GET MIDI_INPUT_DRIVER INFO
      GET MIDI_INPUT_DRIVER_PARAMETER INFO
    - fixed possible compilation error when sqlite is not present
    - fixed orphaned pointers when setting maximum voices limit (bug #118)
    - fixed crash when changing the audio output device of a sampler
      channel with loaded instrument and start playing notes


Version 0.5.1 (6 December 2007)

  * packaging changes:
    - added autoconf checks for pthread library
    - added autoconf check for pthread bug found on certain NPTL-enabled
      glibc versions (see Gentoo bug report #194076)
    - added autoconf checks for MS Windows

  * general changes:
    - bugfix: the thread used by an editor plugin didn't die when the
      editor closed
    - bugfix: Ringbuffer.h: fill_write_space_with_null() did not zero
      out all the space. operator--() did not apply size_mask after
      decrementing the read_ptr. DEFAULT_WRAP_ELEMENTS set to 0 in
      order to avoid problems with the _NonVolatileReader functions.